<resources>
    <string name="app_name">Talento Azteca</string>
    <string name="tvFormulario">Registro de Empleado</string>
    <string name="tvNombre">Nombre(s)</string>
    <string name="edApaterno">Apellido Paterno</string>
    <string name="edAmaterno">Apellido Materno</string>
    <string name="edEntidad">Entidad Federativa</string>
    <string name="edContrasena">Contraseña</string>
    <string name="edConfirmarContrasena">Confirmar contraseña</string>
    <string name="btnRegistrar">Registrarse</string>
    <string name="EdFechaN">Fecha de Nacimiento:</string>

        <string name="tvInicioSesion">Inicio de Sesión</string>
    <string name="edUsuario">Número de Empleado</string>
    <string name="btnInicioSesion">Ingresar</string>

    <string name="alfa">abcdefghijklmnñopqrstuvwxyz ABCDEFGHIJKLMNÑOPQRSTUVWXYZ1234567890áéíóúÁÉÍÓÚ</string>
    <string name="caracteresPassword">abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ1234567890áéíóúÁÉÍÓÚ!?%#[]~|()=?¡¿,.-*;:_°@</string>
    <string name="caracteresEspeciales">abcdefghijklmnñopqrstuvwxyz ABCDEFGHIJKLMNÑOPQRSTUVWXYZ1234567890áéíóúÁÉÍÓÚ!?%#[]~|()=?¡¿,.-*;:_°@</string>
    <string name="numbers">1234567890</string>
    <string name="mensaje_internet">El dispositivo no está conectado a internet, compruebe su conexión e intente de nuevo</string>
    <string name="internet">Internet</string>
    <string name="EdReporte">Reportes</string>
    <string name="tvTecnico">Técnico</string>
    <string name="tvMantenimiento">Mantenimiento</string>
    <string name="tvAdministrativo">Administrativo</string>
    <string name="tvServicio">Servicios</string>
    <string name="tvDescripcionR">Descripción</string>
    <string name="btnEnviarReporte">Enviar</string>
    <string name="registro">Registro</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="HistorialAsistencia">Historial de Asistencia</string>

    <string name="title_fingerprint">Logueo con un toque</string>
    <string name="desc_fingerprint">Coloque la yema del dedo en el escáner para verificar su identidad</string>
    <string name="note">(El inicio de sesión con la huella dactilar hace que la aplicación inicie sesión mucho más rápido. Su dispositivo debe tener al menos una huella digital registrada en la configuración del dispositivo)</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="noneServise">No se pudo conectar con el servidor inténtelo más tarde</string>
    <string name="reportes">Reporte</string>
    <string name="tvLisReportes">Tipo de Problema</string>
    <string name="ErrorConsultarReporte">Error al consultar los reportes en el servidor </string>
    <string name="ErrorFormatos">Formato Inválido </string>
    <string name="btnContinuar">Iniciar Sesión</string>
    <string name="btnFoto">Enviar</string>
    <string name="msnOk">Aceptar</string>
    <string name="FingerprintAuthentication">Inicio de sesión por huella digital</string>
    <string name="mnsFingerprint">Por favor ponga su huella en el sensor</string>
    <string name="tvAvisos">Aviso</string>
    <string name="btnRegresar">Regresar</string>
    <string name="btnElininar">Eliminar</string>
    <string name="btn_ver">Ver</string>
    <string name="txtRecordarContra">Recordar Contraseña</string>
    <string name="entidades">entidades</string>
    <string name="cerrarSesionPregunta">¿Está seguro que desea cerrar sesión?</string>
    <string name="sesion">Sesión</string>
    <string name="errorEntidad">El campo de entidad federativa es obligatorio</string>
    <string name="dbUser">dbUsers</string>
    <string name="no">No</string>
    <string name="si">Si</string>
    <string name="guardarHuella">¿Quieres asociar esta huella con el inicio de sesión?, si ya tiene asociado un usuario será reemplazado</string>
</resources>
