<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.Sesion">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvInicioSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/tvInicioSesion"
                android:textColor="@color/primaryColor"
                android:textSize="30dp" />

            <LinearLayout
                android:id="@+id/layoutImagen"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/tvInicioSesion"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_talento_azteca" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usuario"
                style="@style/Estilo1"
                android:layout_below="@+id/layoutImagen"
                android:layout_marginTop="15dp"
                app:counterEnabled="true"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtLogin_usuario"
                    style="@style/Estilo1"
                    android:backgroundTint="@color/primaryColor"
                    android:digits="@string/numbers"
                    android:hint="@string/edUsuario"
                    android:inputType="number"
                    android:maxLength="6" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contrasena"
                style="@style/Estilo1"
                android:layout_below="@+id/usuario"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtLogin_pass"
                    style="@style/Estilo1"
                    android:backgroundTint="@color/primaryColor"
                    android:hint="@string/edContrasena"
                    android:inputType="textPassword"
                    android:maxLength="50"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:text="@string/txtRecordarContra"
                android:layout_below="@+id/contrasena"
                android:layout_toLeftOf="@id/btnswitch"
                android:textColor="@color/primaryColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Switch
                android:id="@+id/btnswitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/contrasena"
                android:checked="false"
                android:theme="@style/SCBSwitch"
                />

            <LinearLayout
                android:id="@+id/LayoudBotones"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/contrasena"
                android:layout_marginTop="25dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/boton_InicioSesion"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/contrasena"
                    android:layout_gravity="center"
                    android:background="@drawable/borde_circular"
                    android:text="@string/btnInicioSesion"
                    android:textColor="@color/blanco"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/boton_formulario"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/boton_InicioSesion"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/btnRegistrar"
                    tools:ignore="OnClick" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/contenedorHuella"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>