<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.Reportes">


      <LinearLayout
          android:padding="16dp"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="match_parent">




                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/EdReporte"
                      android:textSize="30dp"
                      android:layout_gravity="center"
                      android:textColor="@color/primaryColor"
                      android:layout_margin="10dp"
                      >
                  </TextView>


            <GridLayout
                android:layout_width="346dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:rowCount="3">

                  <androidx.cardview.widget.CardView
                      android:id="@+id/cardViewTecnico"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_rowWeight="1"
                      android:layout_columnWeight="1"
                      android:layout_margin="12dp"
                      app:cardCornerRadius="12dp"
                      app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                              <ImageView
                                  android:layout_width="40dp"
                                  android:layout_height="40dp"
                                  android:src="@drawable/tecnico" />

                              <TextView
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:layout_marginTop="12dp"
                                  android:text="@string/tvTecnico"
                                  android:textSize="18sp" />
                        </LinearLayout>
                  </androidx.cardview.widget.CardView>


                  <androidx.cardview.widget.CardView
                      android:id="@+id/cardViewMantenimiento"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_rowWeight="1"
                      android:layout_columnWeight="1"
                      android:layout_margin="12dp"
                      app:cardCornerRadius="12dp"
                      app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                              <ImageView
                                  android:layout_width="40dp"
                                  android:layout_height="40dp"
                                  android:layout_gravity="center"
                                  android:src="@drawable/mantenimiento" />

                              <TextView
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:layout_marginTop="12dp"
                                  android:text="@string/tvMantenimiento"
                                  android:textSize="18sp" />
                        </LinearLayout>


                  </androidx.cardview.widget.CardView>


                  <androidx.cardview.widget.CardView
                      android:id="@+id/cardViewAdministrativo"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_rowWeight="1"
                      android:layout_columnWeight="1"
                      android:layout_margin="12dp"
                      app:cardCornerRadius="12dp"
                      app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                              <ImageView
                                  android:layout_width="40dp"
                                  android:layout_height="40dp"
                                  android:layout_gravity="center"
                                  android:src="@drawable/administracion" />

                              <TextView
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:layout_marginTop="12dp"
                                  android:text="@string/tvAdministrativo"
                                  android:textSize="18sp" />
                        </LinearLayout>
                  </androidx.cardview.widget.CardView>


                  <androidx.cardview.widget.CardView
                      android:id="@+id/cardViewServicio"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_rowWeight="1"
                      android:layout_columnWeight="1"
                      android:layout_margin="12dp"
                      app:cardCornerRadius="12dp"
                      app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                              <ImageView
                                  android:layout_width="40dp"
                                  android:layout_height="40dp"
                                  android:layout_gravity="center"
                                  android:src="@drawable/servicio" />

                              <TextView
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:layout_marginTop="12dp"
                                  android:text="@string/tvServicio"
                                  android:textSize="18sp" />
                        </LinearLayout>


                  </androidx.cardview.widget.CardView>


            </GridLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                  <EditText
                      android:id="@+id/descipcion"
                      android:layout_margin="12dp"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:visibility="invisible"
                      android:hint="@string/tvDescripcionR"
                      android:maxLength="100"
                      />
                  <Button
                      android:id="@+id/boton_EnviarReporte"
                      android:visibility="invisible"
                      android:layout_width="250dp"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/contrasena"
                      android:layout_gravity="center"
                      android:background="@drawable/borde_circular"
                      android:text="@string/btnEnviarReporte"
                      android:textColor="@color/blanco"
                      android:textSize="22sp"
                      android:textStyle="bold" />
            </LinearLayout>

      </LinearLayout>



</ScrollView>